--- a/workflow.html
+++ b/workflow.html
@@ -5,7 +5,6 @@
     <title>Tools - Workflow</title>
     <link rel="icon" href="workflow.png">
     <style>
-        /* Style global */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
@@ -15,7 +14,7 @@
         }
 
         header {
-            background-color: #24292e; /* couleur style GitHub */
+            background-color: #24292e;
             color: white;
             padding: 20px;
             text-align: center;
@@ -39,7 +38,7 @@
         }
 
         .tab {
-            margin-left: 40px; /* indentation première ligne */
+            margin-left: 40px;
         }
 
         ul {
@@ -50,14 +49,6 @@
 
         ul li {
             margin-bottom: 10px;
-        }
-
-        footer {
-            background-color: #24292e;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 40px;
         }
 
         .highlight {
